--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body {
   line-height: 2rem;
   margin-bottom: 60px;
   font-size: .9em;
+  font-weight:500;
   color: #8f9aac;
   
 }
@@ -82,7 +83,8 @@ body {
   border-radius: 5px;
   text-align: center;
   font-size: .9em;
-  width: 380px;
+  border: none;
+  width: 100%;
   height: 3rem;
   padding: 10px;
   background: #206cdf;
@@ -91,7 +93,7 @@ body {
 button:hover {
   background-color: #8f9aac;
 }
-@media screen and (max-width:992px) {
+@media screen and (max-width:912px){
   body{
     justify-content: center;
     
@@ -103,7 +105,7 @@ button:hover {
        padding: 20px;
   }
 }
-@media screen and (max-width:576px) {
+@media screen and (max-width:480px ) {
   body{
     justify-content: center;
     
@@ -114,7 +116,34 @@ button:hover {
   .container{
        width: 400px;
        margin: 100px 20px 20px 20px;
-     
-  }
-
+     }
+    }
+  @media screen and (max-width:390px ) {
+    .container {
+      width: 350px;
+      margin: 20px;
 }
+.button_style {
+  color: #f0f6fe;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  text-align: center;
+  font-size: .9em;
+  
+  width: 100%;
+  height: 3rem;
+  padding: 10px;
+  background: #206cdf;
+}
+button:hover {
+  background-color: #8f9aac;
+  }
+  .password p {
+    line-height: 2rem;
+    margin-bottom: 60px;
+    font-size: .9em;
+    font-weight:500;
+    color: #ffff;   
+}
+ }
