--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
   width: 500px;
 
   border-radius: 10px;
-
 }
 
 .password {
@@ -60,7 +59,6 @@ body {
   display: grid;
   place-items: center;
   margin: 20px auto;
-  
 }
 
 .nav {
@@ -72,19 +70,18 @@ body {
 .password p {
   line-height: 2rem;
   margin-bottom: 60px;
-  font-size: .9em;
-  font-weight:500;
+  font-size: 0.9em;
+  font-weight: 500;
   color: #8f9aac;
-  
 }
 
 .button_style {
   color: #f0f6fe;
   border-radius: 5px;
   text-align: center;
-  font-size: .9em;
+  font-size: 0.9em;
   border: none;
-  width: 100%;
+  width: 70%;
   height: 3rem;
   padding: 10px;
   background: #206cdf;
@@ -93,57 +90,54 @@ body {
 button:hover {
   background-color: #8f9aac;
 }
-@media screen and (max-width:912px){
-  body{
+@media screen and (max-width: 912px) {
+  body {
     justify-content: center;
-    
-    
   }
-  .container{
-       width: 500px;
-       margin: 200px 60px 10px 20px ;
-       padding: 20px;
+  .container {
+    width: 500px;
+    margin: 200px 60px 10px 20px;
+    padding: 20px;
   }
 }
-@media screen and (max-width:480px ) {
-  body{
+@media screen and (max-width: 480px) {
+  body {
     justify-content: center;
-    
   }
-  .password{
+  .password {
     padding-bottom: 50px;
   }
-  .container{
-       width: 400px;
-       margin: 100px 20px 20px 20px;
-     }
-    }
-  @media screen and (max-width:390px ) {
-    .container {
-      width: 350px;
-      margin: 20px;
+  .container {
+    width: 400px;
+    margin: 100px 20px 20px 20px;
+  }
 }
-.button_style {
-  color: #f0f6fe;
-  border: none;
-  border-radius: 5px;
-  font-weight: 500;
-  text-align: center;
-  font-size: .9em;
-  
-  width: 100%;
-  height: 3rem;
-  padding: 10px;
-  background: #206cdf;
-}
-button:hover {
-  background-color: #8f9aac;
+@media screen and (max-width: 390px) {
+  .container {
+    width: 350px;
+    margin: 20px;
+  }
+  .button_style {
+    color: #f0f6fe;
+    border: none;
+    border-radius: 5px;
+    font-weight: 500;
+    text-align: center;
+    font-size: 0.9em;
+
+    width: 100%;
+    height: 3rem;
+    padding: 10px;
+    background: #206cdf;
+  }
+  button:hover {
+    background-color: #8f9aac;
   }
   .password p {
     line-height: 2rem;
     margin-bottom: 60px;
-    font-size: .9em;
-    font-weight:500;
-    color: #ffff;   
+    font-size: 0.9em;
+    font-weight: 500;
+    color: #ffff;
+  }
 }
- }
